added collection type 'Label, relation field 'labels' and text field 'Description' to the Task collection type

--- a/client/main.css
+++ b/client/main.css
@@ -24,7 +24,7 @@ h1 {
   font-style: normal;
   margin-bottom: var(--spacing-base);
 }
-h3 {
+div h3 {
   font-weight: var(--normal);
   text-decoration: underline;
   margin-bottom: var(--spacing-bl);
