updated the token

--- a/client/main.css
+++ b/client/main.css
@@ -291,3 +291,16 @@ label {
   background-color: var(--accent);
   color: var(--contrast);
 }
+
+/* ************** */
+/* INDEX*/
+/* ************* */
+
+.intro {
+  background-color: var(--accent);
+  width: 30rem;
+  margin: 0 auto;
+  padding: var(--spacing-xs);
+  border-radius: var(--radius-base);
+  text-align: center;
+}
