--- a/client/main.css
+++ b/client/main.css
@@ -301,7 +301,7 @@ label {
   flex-direction: column;
   background-color: var(--accent);
   width: 30rem;
-  margin: 0 auto;
+  margin: 2rem auto;
   padding: var(--spacing-base);
   border-radius: var(--radius-base);
   align-items: center;
